fix css gaps

--- a/src/components/Brand/BrandCharts/styles.module.css
+++ b/src/components/Brand/BrandCharts/styles.module.css
@@ -6,7 +6,7 @@
 .row{
     display: flex;
     flex-direction: row;
-    gap: 10;
+    gap: 10px;
     flex-wrap: wrap;
 }
 
